[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/enemy/new folder/slasher-export.png" type="Texture" id=2]
[ext_resource path="res://Scenes/spikes.tscn" type="PackedScene" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "squashed",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
}, {
"frames": [  ],
"loop": true,
"name": "fireballdead",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 489.797, 665.962 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -68.3327, 226.233 )
scale = Vector2( 4.43754, 4.43754 )
frames = SubResource( 1 )
animation = "walk"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -39.5946, 448.194 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
scale = Vector2( 25, 25 )
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 2

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5

[node name="Area2D" parent="." instance=ExtResource( 3 )]
position = Vector2( -52.1716, -173.258 )
scale = Vector2( 5.105, 5.105 )

[node name="Area2D4" parent="." instance=ExtResource( 3 )]
position = Vector2( -39.6726, 1063.09 )
scale = Vector2( 5.105, -5.105 )

[node name="Area2D2" parent="." instance=ExtResource( 3 )]
position = Vector2( 754.984, 514.274 )
rotation = 1.5708
scale = Vector2( 5.105, 5.105 )

[node name="Area2D3" parent="." instance=ExtResource( 3 )]
position = Vector2( -834.744, 511.303 )
rotation = 1.5708
scale = Vector2( 5.105, -5.105 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
